<resources>
    <string name="app_name">First App</string>
    <string name="main_editProfie">edit Profile</string>
    <string name="main_viewWebsite">view webdite</string>
    <string name="main_skills">skills</string>
    <string name="main_android">Android development </string>
    <string name="done">done </string>
    <string name="main_uidesign">ui/ux </string>
    <string name="main_deeplearning">deep learning </string>
    <string name="main_provinceCity">province,city </string>
    <string name="gilanRAsht">gilan,Rasht </string>
    <string name="tehrran">tehran,tehran </string>
    <string name="alborzkaraj">Alborz,karaj </string>
    <string name="main_saveinformation">save information </string>
    <string name="editprofile_hint">Enter Your Full Name Here</string>
    <string name="userName">HABIB FARAJI</string>
    <string name="userBio"> BIO</string>
</resources>