<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray100"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_appName"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:elevation="10dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_appName"
        app:srcCompat="@drawable/profile_image" />

    <TextView
        android:id="@+id/main_userName_tv"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_image"
        tools:text="@string/userName" />

    <TextView
        android:id="@+id/main_userBio_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_userName_tv"
        tools:text="@string/userBio" />

    <Button
        android:id="@+id/main_editProfile_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_background_primary"
        android:text="@string/main_editProfie"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/main_viewWev_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_userBio_tv" />

    <Button
        android:id="@+id/main_viewWev_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/btn_background_secendary"
        android:text="@string/main_viewWebsite"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_editProfile_btn"
        app:layout_constraintTop_toTopOf="@+id/main_editProfile_btn" />

    <TextView
        android:id="@+id/main_skills_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/main_skills"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/main_editProfile_btn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="26dp" />

    <CheckBox
        android:id="@+id/main_android_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/main_android"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/main_skills_tv" />

    <CheckBox
        android:id="@+id/main_deepLearning_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_deeplearning"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/main_android_cb" />

    <CheckBox
        android:id="@+id/main_ui_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_uidesign"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/main_deepLearning_cb" />

    <TextView
        android:id="@+id/main_city_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/main_provinceCity"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/main_ui_cb" />

    <RadioGroup
        android:id="@+id/main_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/main_city_tv" >

        <RadioButton
            android:id="@+id/main_tehran_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tehrran" />

        <RadioButton
            android:id="@+id/main_gilan_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gilanRAsht" />

        <RadioButton
            android:id="@+id/main_alborz_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alborzkaraj" />
    </RadioGroup>

    <Button
        android:id="@+id/main_saveInformation_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background_primary"
        android:text="@string/main_saveinformation"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>