<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activit_editProfile">

    <EditText
        android:id="@+id/EditProfile_et"
        android:hint="@string/editprofile_hint"
        android:layout_margin="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
/>


    <EditText
        android:id="@+id/bio_et"
        android:hint="@string/userBio"
        android:layout_margin="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/doneBtn"
        android:text="@string/done"
        android:background="@drawable/btn_background_primary"
        app:backgroundTint="@null"
        android:layout_margin="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>